# nextui-dashboard/helpers/api/types/core-types.ts
@@ -1,3 +1,4 @@
+/* eslint-disable */
 /* tslint:disable */
 // @ts-nocheck
 /*
@@ -135,7 +136,7 @@ export interface AuthSwaggerSSOTokenPublicData {
   /** Iss. Идентификатор эмитента токена */
   iss?: string;
   /** K8S type */
-  'k8s:access_type'?: string;
+  "k8s:access_type"?: string;
   /** LastLaunchId. ID пользователя SSO через LMS систему */
   last_launch_id?: string;
   /** Name. Полное ФИО пользователя */
@@ -701,6 +702,18 @@ export interface UsecasesAuthProviderListResponse {
   /** @default "2.0" */
   jsonrpc?: string;
   result?: UsecasesAuthProviderListOutputDTO;
+}
+
+export interface UsecasesAvailableAddonInfo {
+  id?: string;
+  name?: string;
+  type?: string;
+}
+
+export interface UsecasesConnectedAddonInfo {
+  addon_id?: string;
+  id?: number;
+  type?: string;
 }
 
 export interface UsecasesCurlRequestDeleteInputDTO {
@@ -1432,6 +1445,27 @@ export interface UsecasesTargetGetInputDTO {
   id: string;
 }
 
+export interface UsecasesTargetGetOutputDTO {
+  availableAddons?: UsecasesAvailableAddonInfo[];
+  connectedAddons?: UsecasesConnectedAddonInfo[];
+  created_at: string;
+  description?: string;
+  id?: string;
+  /** список ссылок */
+  internal_links?: object[];
+  /** массив внутренних тегов */
+  internal_tags?: string[];
+  /** список ссылок */
+  links?: object[];
+  name?: string;
+  synchronized_at: string;
+  /** массив тегов */
+  tags?: string[];
+  targetUsers?: UsecasesTargetUserInfo[];
+  type?: string;
+  updated_at: string;
+}
+
 export interface UsecasesTargetGetRequest {
   /** @default "1" */
   id?: string;
@@ -1448,7 +1482,7 @@ export interface UsecasesTargetGetResponse {
   id?: string;
   /** @default "2.0" */
   jsonrpc?: string;
-  result?: ModelsTarget;
+  result?: UsecasesTargetGetOutputDTO;
 }
 
 export interface UsecasesTargetItem {
@@ -1601,6 +1635,11 @@ export interface UsecasesTargetUserDeleteResponse {
   /** @default "2.0" */
   jsonrpc?: string;
   result?: UsecasesTargetUserDeleteOutputDTO;
+}
+
+export interface UsecasesTargetUserInfo {
+  roles?: string[];
+  user_id?: number;
 }
 
 export interface UsecasesTargetUserUpsertInputDTO {
